[package]
name = "fantasy"
version = "0.1.0"
authors = ["Angelo Matias, Kurt Aquino"]
edition = "2021"
description = "Initial Fantasy Contract Implementation"
license = "Apache-2.0"
repository = ""
homepage = ""
documentation = ""

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw0 = { path = "../../packages/cw0", version = "0.7.0" }
cw2 = { path = "../../packages/cw2", version = "0.7.0" }
cw20 = { path = "../../packages/cw20", version = "0.7.0" }
cw721 = { path = "../../packages/cw721", version = "0.7.0" }
cosmwasm-std = { version = "0.15.0" }
cosmwasm-storage = { version = "0.15.2" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
terra-cosmwasm = { version = "1.2" }
cosmwasm-bignumber = "1.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.15.0" }
